# silikongaroo

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  main.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: ALGORITHM.md  BENCHMARKS.md  FAQ.md
include/: ECC.hpp  Kangaroo.hpp  MetalAccelerator.hpp  Utils.hpp
src/: ECC.cpp  Kangaroo.cpp  MetalAccelerator.mm  Utils.cpp  kernels.metal  main.cpp
tools/: gen_key.cpp
